--- a/app/Resources/views/cours/adminGroupe.html.twig
+++ b/app/Resources/views/cours/adminGroupe.html.twig
@@ -22,22 +22,23 @@
         </div>
         <div class="row mb-10">
             <div class="LabelAdmin col-sm-3">Description</div>
-            <div class=" col-sm-9  col-xs-12">
+            <div class="noPadding col-sm-9  col-xs-12">
                 <textarea data-champName="description" id="zone_{{ zoneId }}_groupeLien_{{ itemId }}_descr" class="simpleEditor editor champAdmin">{{ description }}</textarea>
             </div>
 
         </div>
+        <hr class="hrCourseElem" />
         <div class="row">
             <div class="LabelAdmin col-sm-2">Liens</div>
             <div class="selectLienToAddToGroupe btn btnAdmin col-sm-1"><i class="fa fa-plus"> </i></div>
-            <div class=" col-sm-9  col-xs-12 listeLiensGroupe sortableLiensInGroupe">
+            <div class=" col-sm-9  col-xs-12 listeItemContained sortableLiensInGroupe">
                 {% for keyR,valR in liens %}
                     <div class="row" data-idLien="{{ valR.id }}">
                         <div class="col-xs-10">
                             <div class="myBtn btnMove inlineBtn"><i class="fa fa-arrows-alt "></i></div>
                             <div class="nomAssoc inlineBtn">{{ valR.nom }}</div>
                         </div>
-                        <div class="col-xs-2 text-right">
+                        <div class="col-xs-2 text-right noPadding">
                             <div class="myBtn btnEdit inlineBtn btnEditLienInGroup">
                                 <i class="fa fa-pencil"></i>
                             </div>
