--- a/app/Resources/views/cours/adminLibre.html.twig
+++ b/app/Resources/views/cours/adminLibre.html.twig
@@ -8,7 +8,7 @@
     {% include "cours/adminBtns.html.twig" with {visible: visible}  %}
     <div class="formCol col-md-11">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 noPadding">
                 <textarea data-champName="description" id="zone_{{ zoneId }}_lien_{{ itemId }}_descr" class="simpleEditor editor champAdmin">{{ description }}</textarea>
             </div>
         </div>
