--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -28,6 +28,8 @@
 
             $('.btnOpenDevoir').click(function(){
                 var idItem = $(this).closest('[data-iditem]').attr('data-iditem');
+                var myBtn = $(this);
+                var idSection = $(this).closest('.section').attr('data-idSection');
 
                 $.ajax({
                     type: 'POST',
@@ -56,13 +58,92 @@
 
                         var dateD = toJSDate(data['dateDebut']['date']);
                         var dateF = toJSDate(data['dateFin']['date']);
-                        var limitDate = dateF;
-                        limitDate.setHours(limitDate.getHours() + parseInt(dureeH));
-                        limitDate.setMinutes(limitDate.setMinutes() + parseInt(dureeM));
+                        var limitDate = toJSDate(data['dateFin']['date']);
+                        limitDate.setHours(parseInt(limitDate.getHours() + parseInt(dureeH)));
+                        limitDate.setMinutes(parseInt(limitDate.getMinutes() + parseInt(dureeM)));
 
+                        // On ajoute les liens vers les fichiers de sujets
+                        $('.listeDevoirSujets').append(myBtn.closest('.conteneurLiensSujets').find('.listeSujets'));
+                        $('.listeDevoirSujets .listeSujets *').removeClass('hidden')
 
                         popup.find('.alert').hide();
+                        if(data['copieStart'] == "") {
+                            $('.beginDevoir, .masqueDevoir').show();
+                            $('.alert_beforeDownload').show();
+                            $('.chrono_h').text(dureeH);
+                            $('.chrono_m').text(dureeM);
+                            $('.chrono_s').text("00");
 
+                            $('.beginDevoir').unbind('click').click(function(){
+
+                                // creation de l'objet Copie
+                                $.ajax({
+                                    type: 'POST',
+                                    url: "{{path('startDevoir_ajax')}}",
+                                    async: false,
+                                    dataType: "json",
+                                    data: {
+                                        id: idItem,
+                                        userId: $('[data-userId]').attr('data-userId')
+                                    },
+                                    success: function (data) {
+
+                                        $('.masqueDevoir').hide();
+                                        var chrono = setInterval(function(){
+                                            var h = parseInt($('.chrono_h').text());
+                                            var m = parseInt($('.chrono_m').text());
+                                            var s = parseInt($('.chrono_s').text());
+                                            if(s == 0){
+                                                if(m == 0){
+                                                    if(h == 0){
+                                                        clearInterval(chrono);
+                                                        window.location.href = window.location.href.replace( /[\?#].*|$/, "?idSection="+idSection );
+                                                    }else{
+                                                        var newH = parseInt(h-1);
+                                                        $('.chrono_h').text(newH);
+                                                        $('.chrono_m').text('59');
+                                                    }
+                                                }else{
+                                                    var newM = parseInt(m-1);
+                                                    if(newM < 10){
+                                                        newM = "0"+newM;
+                                                    }
+                                                    $('.chrono_m').text(newM);
+                                                    $('.chrono_s').text('59');
+                                                }
+                                            }else{
+                                                var newS = parseInt(s-1);
+                                                if(newS < 10){
+                                                    newS = "0"+newS;
+                                                }
+                                                $('.chrono_s').text(newS);
+                                            }
+                                        }, 1000);
+
+                                    }
+                                });
+                            });
+                        }else{
+                            // le devoir avait déjà été commencé
+                            $('.beginDevoir, .masqueDevoir').hide();
+                            $('.alert_duringDevoir').show();
+                            var dateCopie = toJSDate(data['copieStart']['date']);
+                            var timeLimit = dateCopie;
+                            timeLimit.setHours(limitDate.getHours() + parseInt(dureeH));
+                            timeLimit.setMinutes(limitDate.getMinutes() + parseInt(dureeM));
+                            var now = new Date();
+                            if(now > timeLimit){
+                                window.location.href = window.location.href.replace( /[\?#].*|$/, "?idSection="+idSection );
+                            }else{
+                                var diff = timeLimit - now;
+                                var diffSeconds = diff / 1000;
+                                var HH = Math.floor(diffSeconds / 3600);
+                                var MM = Math.floor(diffSeconds % 3600) / 60;
+                                $('.chrono_h').text(HH);
+                                $('.chrono_m').text(MM);
+                                $('.chrono_s').text("00");
+                            }
+                        }
                     },
                     error: function(xhr, status, error) {
                     }
@@ -77,6 +158,28 @@
                 var time = dateTime[1].split(":");
 
                 return new Date(date[0], (date[1]-1), date[2], time[0], time[1], 0, 0);
+            }
+            function formatNum(num) {
+                return num < 10 ? '0' + num : '' + num;
+            }
+
+            var getUrlParameter = function getUrlParameter(sParam) {
+                var sPageURL = decodeURIComponent(window.location.search.substring(1)),
+                        sURLVariables = sPageURL.split('&'),
+                        sParameterName,
+                        i;
+
+                for (i = 0; i < sURLVariables.length; i++) {
+                    sParameterName = sURLVariables[i].split('=');
+
+                    if (sParameterName[0] === sParam) {
+                        return sParameterName[1] === undefined ? true : sParameterName[1];
+                    }
+                }
+            };
+            // on clique sur la section passée en paramètre (si reload de la page)
+            if(getUrlParameter("idSection")){
+                $('.ongletSection[data-idsection='+getUrlParameter("idSection")+'] a').click();
             }
         });
     </script>
@@ -112,7 +215,7 @@
             <div class="col-sm-3">
                 <ul class="nav nav-pills nav-stacked pull-left" role="tablist" style="padding-bottom: 5px;padding-top: 5px">
                     {% for key,val in zonesSections if val.section.isVisible == 1 %}
-                        <li role="presentation" {% if loop.index == 1 %} class="active" {% endif %}>
+                        <li role="presentation"  class="ongletSection{% if loop.index == 1 %} active{% endif %}"   data-idsection="{{ val.section.id }}">
                             <a href="#t1body{{ val.section.id }}" aria-controls="t1body{{ val.section.id }}" role="tab" data-toggle="tab" aria-expanded="true"><i class="fa fa-pencil fa-fw" aria-hidden="true"> </i>{{ val.section.nom }}</a>
                         </li>
                     {% endfor %}
@@ -122,7 +225,7 @@
                 <div class="tab-content">
                     {% set firstDisplayed = 1 %}
                     {% for key,val in zonesSections if val.section.isVisible %}
-                        <div role="tabpanel" class="tab-pane fade{% if loop.index == 1 %} in active {% endif %}" id="t1body{{ val.section.id }}">
+                        <div role="tabpanel" data-idSection="{{ val.section.id }}" class="section tab-pane fade{% if loop.index == 1 %} in active {% endif %}" id="t1body{{ val.section.id }}">
                             <div class="editor">
                                 <ul class="list-default">
                                     {% for keyR,valR in val.zones.content %}
@@ -173,8 +276,15 @@
                                                             </div>
                                                             <!-- On permet d'afficher la popup seulement si la date de fin n'est pas dépassée et si une copie n'a pas encore été déposée -->
                                                             {% if val.zones.copieFichier[keyR] == "undefined" and  "now"|date('Ymd H:i:s') < valR.dateFin|date('Ymd H:i:s') %}
-                                                                <div class="col-xs-3 text-right">
-                                                                    <div class="btn btn-sm btn-info btnOpenDevoir">Ouvrir</div>
+                                                                <div class="col-xs-3 text-right conteneurLiensSujets">
+                                                                    <div class="btn btn-sm btn-info btnOpenDevoir">
+                                                                        Ouvrir
+                                                                    </div>
+                                                                    <div class="listeSujets">
+                                                                        {% for keyS,valS in val.zones.sujet[keyR] %}
+                                                                            <a class="btn btn-sm btn-info mb-3 hidden" target="_blank" href="{{ valS.url }}">{{ valS.nom }}</a>
+                                                                        {% endfor %}
+                                                                    </div>
                                                                 </div>
                                                             {% endif %}
                                                         </div>
@@ -186,16 +296,16 @@
                                                                     <td>Sujet du devoir</td>
                                                                     <td>
                                                                         {% for keyS,valS in val.zones.sujet[keyR] %}
-                                                                            <a class="btn btn-sm btn-info mb-3" href="{{ valS.url }}">{{ valS.nom }}</a>
+                                                                            <a class="btn btn-sm btn-info mb-3" target="_blank" href="{{ valS.url }}">{{ valS.nom }}</a>
                                                                         {% endfor %}
                                                                     </td>
                                                                 </tr>
-                                                                {% if val.zones.corrige[keyR] != "undefined" %}
+                                                                {% if val.zones.corrigeType[keyR] != "undefined" %}
                                                                     <tr>
                                                                         <td>Corrigé type du devoir</td>
                                                                         <td>
                                                                             {% for keyC,valC in val.zones.corrigeType[keyR] %}
-                                                                                <a class="btn btn-sm btn-success mb-3" href="{{ valC.url }}">{{ valC.nom }}</a>
+                                                                                <a class="btn btn-sm btn-success mb-3" target="_blank" href="{{ valC.url }}">{{ valC.nom }}</a>
                                                                             {% endfor %}
                                                                         </td>
                                                                     </tr>
@@ -205,7 +315,7 @@
                                                                     <td>Devoir commencé le {{ val.zones.copie[keyR].dateCreation|localizeddate('none', 'none', null, null, 'd LLLL Y à h:mm' ) }}</td>
                                                                     <td>
                                                                         {% if val.zones.copieFichier[keyR] != "undefined" %}
-                                                                            <a class="btn btn-sm btn-warning" href="{{ val.zones.copieFichier[keyR].url }}">Ma copie</a>
+                                                                            <a class="btn btn-sm btn-warning" target="_blank" href="{{ val.zones.copieFichier[keyR].url }}">Ma copie</a>
                                                                         {% endif %}
                                                                     </td>
                                                                 </tr>
@@ -215,7 +325,7 @@
                                                                         <td>Corrigé déposé le {{ val.zones.corrige[keyR].dateRendu|localizeddate('none', 'none', null, null, 'd LLLL Y à h:mm' ) }} par <a href="mailto:{{ val.zones.corrige[keyR].auteur.email }}">{{ val.zones.corrige[keyR].auteur.firstname }} {{ val.zones.corrige[keyR].auteur.lastname }}</a></td>
                                                                         <td>
                                                                             {% if val.zones.corrigeFichier[keyR] != "undefined" %}
-                                                                                <a class="btn btn-sm btn-success" href="{{ val.zones.corrigeFichier[keyR].url }}">Ma copie</a>
+                                                                                <a class="btn btn-sm btn-success" target="_blank" href="{{ val.zones.corrigeFichier[keyR].url }}">Ma copie</a>
                                                                             {% endif %}
                                                                         </td>
                                                                     </tr>
@@ -282,13 +392,42 @@
                                 <div class="popupDevoirDescription mb-10"></div>
 
                                 <div class="alert alert-danger mb-10 alert_beforeDownload">
+                                    <strong>Attention!</strong> Lors du click sur "commencer", le chronomètre du devoir sera lancé.
+                                    <p>Vous disposerez alors de <span class="popupDevoirDuree"></span> pour rendre vos fichiers.</p>
+                                </div>
+
+                                <div class="alert alert-danger mb-10 alert_duringDevoir">
                                     <strong>Attention!</strong> Lors du démarrage du téléchargement, le chronomètre du devoir sera lancé.
                                     <p>Vous disposerez alors de <span class="popupDevoirDuree"></span> pour rendre vos fichiers.</p>
                                 </div>
 
-                                <div class="chronometre">
-                                    <span class="chrono_h"></span>:<span class="chrono_m"></span>
+                                <div class="row mb-10" style="text-align: center">
+                                    <div class="btn btn-sm btn-info mb-3 beginDevoir">Commencer</div>
                                 </div>
+                                <div class="contentDevoirRess">
+                                    <div class="masqueDevoir"></div>
+
+                                    <div class="listeDevoirSujets col-sm-6 col-xs-12">
+                                        Fichiers de sujet :
+                                    </div>
+
+                                    <div class="fileUploader col-sm-6 col-xs-12">
+                                        <span class="btn btn-success fileinput-button">
+                                            <i class="glyphicon glyphicon-plus"></i>
+                                            <span>Déposer ma copie</span>
+                                            <input id="itemUpload" type="file" name="files[]" multiple>
+                                        </span>
+
+                                        <div id="itemProgress" class="progress col-xs-12">
+                                            <div class="progress-bar progress-bar-success"></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="chronometre">
+                                        <span class="chrono_elem chrono_h"></span>:<span class="chrono_elem chrono_m"></span>:<span class="chrono_elem chrono_s">00</span>
+                                    </div>
+                                </div>
+
 
                             </div>
                         </div>
