--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -417,3 +417,26 @@ textarea{
     font-size: 14px;
     font-style: italic;
 }
+.contentDevoirRess{
+    position: relative;
+    padding: 20px;
+}
+.masqueDevoir{
+    z-index: 10;
+    background: #000;
+    opacity: .4;
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+}
+.chronometre{
+    margin-top: 20px;
+    font-size: 42px;
+    text-align: center;
+    color: #c60100;
+}
+.chrono_elem{
+    padding: 5px;
+}
