--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -49,6 +49,8 @@ body{
 .pb-10{padding-bottom:10px;}
 
 .ml-10{margin-left:10px;}
+.ml-20{margin-left:20px;}
+.pb-20{padding-bottom:20px;}
 
 .mt-140 {
     margin-top: 140px;
