--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -12,7 +12,8 @@
 
                 <hr/>
                 <a href="#">Mot de passe oublié ?</a>
-
+                <br/>
+                <a href="{{ path('inscription') }}">Créer un compte</a>
             </div>
         </aside>
     </div>
