--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -94,7 +94,7 @@
                             <li><a href="{{ path('concours') }}">Concours</a></li>
                             <li><a href="{{ path('faq') }}">FAQ</a></li>
                             <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
-                            <li><a href="{{ path('sinscrire') }}">Comment s'inscrire ?</a></li>
+                            <li><a href="{{ path('inscription') }}">Comment s'inscrire ?</a></li>
                         </ul>
                     </li>
                     <li><a href="{{ path('myCourses') }}">Les cours</a></li>
@@ -134,7 +134,7 @@
                         <li><a href="{{ path('concours') }}">Concours</a></li>
                         <li><a href="{{ path('faq') }}">FAQ</a></li>
                         <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
-                        <li><a href="{{ path('sinscrire') }}">Comment s'inscrire ?</a></li>
+                        <li><a href="{{ path('inscription') }}">Comment s'inscrire ?</a></li>
                         <li><a href="{{ path('afadec') }}">L’AFADEC</a></li>
                     </ul>
                 </div>
