--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -6,6 +6,10 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+.loginError{
+    color: #c70700;
+}
+
 /* footer */
 .quick-links > li > a{
     color: #d3d3d3
